--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
-- School: Princeton
-  Degree: 
-  Program: School of Public and International Affairs
+- School: Savannah College of Art and Design
+  Degree: Acting
+  Program: School of Film and Acting
   Start Date: 
   End Date: 
   Icon: /assets/img/icons/2x/princeton-crop.png      # Make this icon small, think 30px/30px
