--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,5 +1,5 @@
 - School: Savannah College of Art and Design
-  Degree: Acting
+  Degree: 
   Program: School of Film and Acting
   Start Date: 
   End Date: 
