--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ help_tips: false                                    # options: true, false  | us
 # =======================================#
 # -----------BUILD SETTINGS--------------#
 #========================================#
-theme: 
+theme: dark
 markdown: kramdown
 
 kramdown:
