--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 
 title: Matthew Johnson 
 email: mattjohnvo@outlook.com
-description: Actor with Professional Home Studio
+description: 
 baseurl:                                       # the subpath of your site, e.g. /blog
 url: "mattjohnvo.github.io"          # the base hostname & protocol for your site, e.g. http://example.com
 image: /assets/img/avatar/cropped.png              # used to generate site link preview
@@ -22,7 +22,7 @@ image_alt: A minimalistic jekyll theme for academic    # image description
 author: Matthew Johnson 
 profile_image: /assets/img/avatar/cropped.png #/assets/img/avatar/avatar.jpeg 
 occupation: Actor
-snippet:
+snippet:Actor with Professional Home Studio
 twitter: mattjohnvo
 github: mattjohnvo
 linkedin: mattjohnvo
