--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,14 +1,14 @@
 nav_list_title: Navigation List
 links:
 
-- title: About
-  url: about.html
+#- title: About
+#  url: about.html
 
-- title: Blog
-  url: blog.html
+#- title: Blog
+#  url: blog.html
 
-- title: Vitae
-  url: /assets/pdf/vitae.pdf
+#- title: Vitae
+ # url: /assets/pdf/vitae.pdf
 
 - title: Contact
   url: contact.html
