--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -10,5 +10,5 @@ links:
 #- title: Vitae
  # url: /assets/pdf/vitae.pdf
 
-- title: Contact
-  url: contact.html
+#- title: Contact
+ # url: contact.html
