--- a/_data/themes.yml
+++ b/_data/themes.yml
@@ -72,5 +72,167 @@ dark:
     default-button-color: ""
     social-color-footer : black
 
+verdant:
+    name: verdant
+    nav-color: "#228B22"
+    nav-text: "#ffffff"
+    title-font: "Raleway"
+    link-font: "#005700"
+    link-color: "#005700"
+    font: "Roboto"
+    font-color: "Black"
+    social-color: "#66c285"
+    footer-social-color: "Black"
+    button-color: "#005700"
+    home-highlight-background: "#228B22"
+    home-highlight-header-text: "#ffffff"
+    education-title-font: "Raleway"
+    education-title-size: "18px"
+    education-entry-font: "Raleway"
+    education-entry-size: "18px"
+    education-section-size: "15px"
+    certification-title-font: "Raleway"
+    certification-title-size: "18px"
+    certification-entry-font: "Raleway"
+    certification-entry-size: "18px"
+    certification-section-size: "15px"
+    highlights-tab-color: "#ffffff"
+    projects-color: "Black"
+    border-style: "double 2px #005700"
+    post-tag-size: "20px"
+    post-title-size: "36px"
+    post-author-size: "15px"
+    post-font-weight: "700"
+    default-button-color: "#005700"
 
+sunset-glow:
+    name: sunset-glow
+    nav-color: "#FF4500"
+    nav-text: "#ffffff"
+    title-font: "Quicksand"
+    link-font: "#CC3700"
+    link-color: "#CC3700"
+    font: "Nunito"
+    font-color: "Black"
+    social-color: "#FF8C69"
+    footer-social-color: "Black"
+    button-color: "#CC3700"
+    home-highlight-background: "#FF4500"
+    home-highlight-header-text: "#ffffff"
+    education-title-font: "Quicksand"
+    education-title-size: "18px"
+    education-entry-font: "Quicksand"
+    education-entry-size: "18px"
+    education-section-size: "15px"
+    certification-title-font: "Quicksand"
+    certification-title-size: "18px"
+    certification-entry-font: "Quicksand"
+    certification-entry-size: "18px"
+    certification-section-size: "15px"
+    highlights-tab-color: "#ffffff"
+    projects-color: "Black"
+    border-style: "solid 2px #CC3700"
+    post-tag-size: "20px"
+    post-title-size: "36px"
+    post-author-size: "15px"
+    post-font-weight: "700"
+    default-button-color: "#CC3700"
 
+lavender-fields:
+    name: lavender-fields
+    nav-color: "#9370DB"
+    nav-text: "#ffffff"
+    title-font: "Merriweather"
+    link-font: "#663399"
+    link-color: "#663399"
+    font: "Montserrat"
+    font-color: "Black"
+    social-color: "#B0C4DE"
+    footer-social-color: "Black"
+    button-color: "#663399"
+    home-highlight-background: "#9370DB"
+    home-highlight-header-text: "#ffffff"
+    education-title-font: "Merriweather"
+    education-title-size: "18px"
+    education-entry-font: "Merriweather"
+    education-entry-size: "18px"
+    education-section-size: "15px"
+    certification-title-font: "Merriweather"
+    certification-title-size: "18px"
+    certification-entry-font: "Merriweather"
+    certification-entry-size: "18px"
+    certification-section-size: "15px"
+    highlights-tab-color: "#ffffff"
+    projects-color: "Black"
+    border-style: "dotted 2px #663399"
+    post-tag-size: "20px"
+    post-title-size: "36px"
+    post-author-size: "15px"
+    post-font-weight: "700"
+    default-button-color: "#663399"
+
+aurora:
+    name: aurora
+    nav-color: "#ff6600"
+    nav-text: "#ffffff"
+    title-font: "Lato"
+    link-font: "#cc5200"
+    link-color: "#cc5200"
+    font: "Open Sans"
+    font-color: "Black"
+    social-color: "#ff9933"
+    footer-social-color: "Black"
+    button-color: "#cc5200"
+    home-highlight-background: "#ff6600"
+    home-highlight-header-text: "#ffffff"
+    education-title-font: "Lato"
+    education-title-size: "18px"
+    education-entry-font: "Lato"
+    education-entry-size: "18px"
+    education-section-size: "15px"
+    certification-title-font: "Lato"
+    certification-title-size: "18px"
+    certification-entry-font: "Lato"
+    certification-entry-size: "18px"
+    certification-section-size: "15px"
+    highlights-tab-color: "#ffffff"
+    projects-color: "Black"
+    border-style: "dashed 2px #cc5200"
+    post-tag-size: "20px"
+    post-title-size: "36px"
+    post-author-size: "15px"
+    post-font-weight: "700"
+    default-button-color: "#cc5200"
+
+oceanic:
+    name: oceanic
+    nav-color: "#0077cc"
+    nav-text: "#ffffff"
+    title-font: "Montserrat"
+    link-font: "#004080"
+    link-color: "#004080"
+    font: "Roboto"
+    font-color: "Black"
+    social-color: "#6699cc"
+    footer-social-color: "Black"
+    button-color: "#004080"
+    home-highlight-background: "#0077cc"
+    home-highlight-header-text: "#ffffff"
+    education-title-font: "Montserrat"
+    education-title-size: "18px"
+    education-entry-font: "Montserrat"
+    education-entry-size: "18px"
+    education-section-size: "15px"
+    certification-title-font: "Montserrat"
+    certification-title-size: "18px"
+    certification-entry-font: "Montserrat"
+    certification-entry-size: "18px"
+    certification-section-size: "15px"
+    highlights-tab-color: "#ffffff"
+    projects-color: "Black"
+    border-style: "solid 2px #004080"
+    post-tag-size: "20px"
+    post-title-size: "36px"
+    post-author-size: "15px"
+    post-font-weight: "700"
+    default-button-color: "#004080"
