--- a/_data/themes.yml
+++ b/_data/themes.yml
@@ -236,3 +236,69 @@ oceanic:
     post-author-size: "15px"
     post-font-weight: "700"
     default-button-color: "#004080"
+
+sunflower-yellow:
+    name: sunflower-yellow
+    nav-color: "#FFD700"
+    nav-text: "#000000"
+    title-font: "Cabin"
+    link-font: "#FFB90F"
+    link-color: "#FFB90F"
+    font: "Lato"
+    font-color: "Black"
+    social-color: "#FFD700"
+    footer-social-color: "Black"
+    button-color: "#FFB90F"
+    home-highlight-background: "#FFD700"
+    home-highlight-header-text: "#000000"
+    education-title-font: "Cabin"
+    education-title-size: "18px"
+    education-entry-font: "Cabin"
+    education-entry-size: "18px"
+    education-section-size: "15px"
+    certification-title-font: "Cabin"
+    certification-title-size: "18px"
+    certification-entry-font: "Cabin"
+    certification-entry-size: "18px"
+    certification-section-size: "15px"
+    highlights-tab-color: "#000000"
+    projects-color: "Black"
+    border-style: "solid 2px #FFB90F"
+    post-tag-size: "20px"
+    post-title-size: "36px"
+    post-author-size: "15px"
+    post-font-weight: "700"
+    default-button-color: "#FFB90F"
+
+electric-blue:
+    name: electric-blue
+    nav-color: "#0070FF"
+    nav-text: "#ffffff"
+    title-font: "Exo"
+    link-font: "#003366"
+    link-color: "#003366"
+    font: "Oswald"
+    font-color: "Black"
+    social-color: "#66B2FF"
+    footer-social-color: "Black"
+    button-color: "#003366"
+    home-highlight-background: "#0070FF"
+    home-highlight-header-text: "#ffffff"
+    education-title-font: "Exo"
+    education-title-size: "18px"
+    education-entry-font: "Exo"
+    education-entry-size: "18px"
+    education-section-size: "15px"
+    certification-title-font: "Exo"
+    certification-title-size: "18px"
+    certification-entry-font: "Exo"
+    certification-entry-size: "18px"
+    certification-section-size: "15px"
+    highlights-tab-color: "#ffffff"
+    projects-color: "Black"
+    border-style: "dashed 2px #003366"
+    post-tag-size: "20px"
+    post-title-size: "36px"
+    post-author-size: "15px"
+    post-font-weight: "700"
+    default-button-color: "#003366"
