--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ description: Actor with Professional Home Studio
 baseurl:                                       # the subpath of your site, e.g. /blog
 url: "mattjohnvo.github.io"          # the base hostname & protocol for your site, e.g. http://example.com
 image: /assets/img/avatar/cropped.png              # used to generate site link preview
-image_alt: A minimalistic jekyll theme for academic    # image description
+image_alt: Matthew Johnson    # image description
 
 # =======================================#
 # -----------SITE SETTINGS---------------#
@@ -47,7 +47,7 @@ ui_theme: sunflower-yellow                                  # Create your own th
 #========================================#
 
 tags:  post jekyll styleguide ipsum
-twitter-widget: false # true,false                  # Used to show your twitter timeline on blog home page
+twitter-widget: true # true,false                  # Used to show your twitter timeline on blog home page
 
 comments: false                                     # Used to enable comments on blog posts
 gitalk_client_id:             
