--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 
 title: Matthew Johnson 
 email: mattjohnvo@outlook.com
-description: Actor with Professional Home Studio
+description: Actor with A Professional Home Studio
 baseurl:                                       # the subpath of your site, e.g. /blog
 url: "mattjohnvo.github.io"          # the base hostname & protocol for your site, e.g. http://example.com
 image: /assets/img/avatar/cropped.png              # used to generate site link preview
