--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # -----------BASE SETTINGS---------------#
 #========================================#
 
-title: Matthew Johnson 
+title: 
 email: mattjohnvo@outlook.com
 description: Actor with A Professional Home Studio
 baseurl:                                       # the subpath of your site, e.g. /blog
@@ -19,7 +19,7 @@ image_alt: Matthew Johnson    # image description
 # =======================================#
 # -----------SITE SETTINGS---------------#
 #========================================#: 
-author:  
+author:  Matthew Johnson
 profile_image: /assets/img/avatar/cropped.png #/assets/img/avatar/avatar.jpeg 
 occupation: Actor
 snippet: Actor with Professional Home Studio
