--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 # -----------BASE SETTINGS---------------#
 #========================================#
 
-title: 
+title: Matthew Johnson - Voice Acting Portfolio
 email: mattjohnvo@outlook.com
 description: Actor with A Professional Home Studio
 baseurl:                                       # the subpath of your site, e.g. /blog
@@ -65,7 +65,7 @@ nav-color: "#00334e"                                 # options: light, dark, tra
 footer-color: "#00334e"
 color-scheme: "#00334e"                              # options: demo | changes color scheme based on preset values 
 card-color: "#00334e"                                # Used on cards like the home highlights section
-nav-dIcon: "fas fa-caret-down"                       # Change the navbar dropdown (for mobile or small screen sizes) to any fontawesome icon. for a list of icons visit https://fontawesome.com/ 
+#nav-dIcon: "fas fa-caret-down"                       # Change the navbar dropdown (for mobile or small screen sizes) to any fontawesome icon. for a list of icons visit https://fontawesome.com/ 
 animate: true                                        # false or true, uses animate.css to animate certain functions
 
 # =======================================#
@@ -133,7 +133,7 @@ scholar:
 # ------------CDN SETTINGS---------------#
 #-------------Used to generate icons-----#
 #========================================#
-font_awesome_id: 32a2b2a489                       # Register for free at https://fontawesome.com/ to get your id
+font_awesome_id: 3367af2bc2                       # Register for free at https://fontawesome.com/ to get your id
 
 
 # =======================================#        # For more information about these settings, visit https://htmlhead.dev #
