--- a/_config.yml
+++ b/_config.yml
@@ -8,18 +8,18 @@
 # -----------BASE SETTINGS---------------#
 #========================================#
 
-title: Matthew Johnson - Voice Acting Portfolio
+title: Matthew L. Johnson - Voice Acting Portfolio
 email: mattjohnvo@outlook.com
 description: Abundantly Present
 baseurl:                                       # the subpath of your site, e.g. /blog
 url: "mattjohnvo.github.io"          # the base hostname & protocol for your site, e.g. http://example.com
 image: /assets/img/avatar/cropped.png              # used to generate site link preview
-image_alt: Matthew Johnson    # image description
+image_alt: Matthew L. Johnson    # image description
 
 # =======================================#
 # -----------SITE SETTINGS---------------#
 #========================================#: 
-author:  Matthew Johnson
+author:  Matthew L. Johnson
 profile_image: /assets/img/avatar/cropped.png #/assets/img/avatar/avatar.jpeg 
 occupation: Actor
 snippet: Actor with Professional Home Studio
